<resources>
    <string name="app_name">MealBuddy</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="loginMain">Log In</string>
    <string name="emailHint">Drexel Email</string>
    <string name="passwHint">Password</string>
    <string name="forgotPassw">Forgot Password?</string>
    <string name="createAcc">Create Account</string>


    <string name="signUpMain">Please enter your information below: </string>
    <string name="nameHint">Name</string>
    <string name="confirmPassw">Confirm Password</string>
    <string name="readPolicy">I agree to the privacy policy</string>
    <string name="SignUpBut">Sign Up</string>
    <string name="goLogin">Already have an account? Sign In here</string>

    <string name="emailAuthMain">We’ve sent a verification email to your Drexel account! \n\n Please confirm you are a real Drexel student. </string>
    <string name='verifybutton'>Resend verification email</string>
    <string name='verifiedbutton'>I\'m verified!</string>

    <string name="outfitMain">Describe what you\'re wearing today</string>
    <string name="outfit2">This will be used to help your buddy find you!</string>
    <string name="outfitHint">I\'m wearing a gray jacket, red sneakers...</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="timeMain">Select your Time</string>

    <string name="locationMain">Select your Location</string>
    <string name="timeChosen1">Time Chosen: </string>
    <string name="locButHans">The Hans</string>
    <string name="locButUrban">Urban Eatery</string>
    <string name="locButNorthside">Northside Dining</string>
    <string name="locButComingSoon">Coming Soon...</string>

    <string name="requestSubmitMain">Submit Match Request?</string>
    <string name="locChosen1">Place Chosen: </string>
    <string name="outfitChosen1">Outfit Chosen: </string>
    <string name="timeSelected">[N/A]</string>
    <string name="locationSelected">[N/A]</string>
    <string name="outfitSelected">[N/A]</string>

    <string name="findingBuddyMain">Searching for your buddy...</string>
    <string name="findingBuddy2">We\'ll send you a notification when you get a match!</string>

    <string name="matchFoundMain">We\'ve found you a match!</string>
    <string name="matchFoundOutfit">Your buddy\'s outfit:</string>
    <string name="buddyOutfitDynamic">This will be revealed two minutes before your meal is set to start!</string>
    <string name="matchFoundProceed">Go ahead and proceed to the location of your meal!</string>

    <string name="noMatchMain">We\'re sorry...</string>
    <string name="noMatchMain2">No match found</string>
    <string name="noMatchMain3">Sometimes, it just happens that no one ends up signing up for the same time and place.</string>
    <string name="noMatchMain4">If this keeps happening to you, try searching at more common meal times!</string>
    <string name="noMatchMain5">Remember - matches are assigned completely randomly.</string>
    <string name="backToHome">Back To Home</string>
    <string name="mealDone">Meal Done</string>

    <string name="meCancellingMain">Are you sure?</string>
    <string name="meCancelling2">Canceling too often can result in you being suspended from the app.</string>
    <string name="meCancelling3">Your buddy is counting on you to be there!</string>
    <string name="meCancellingBut">I have no choice - Cancel Anyway</string>

    <string name="buddyCancelledMain">Your buddy had to cancel</string>
    <string name="buddyCancelled2">They\'ve been warned that frequent cancelling can get them suspended from the app.</string>
    <string name="buddyCancelled3">We hope your next meal turns out better!</string>

    <string name="meCancelledMain">Match Cancelled</string>
    <string name="meCancelled2">We\'ve notified your buddy. Please do your best not to cancel in the future.</string>

    <string name="overallReviewMain">Would you like to be eligible to match with your buddy again?</string>
    <string name="overallReviewBuddy">Buddy\'s name:</string>
    <string name="overallReviewBuddyDynamic">N/A</string>
    <string name="overallReviewYes">Yes - we really hit it off!</string>
    <string name="overallReviewWait">Yes - but only after a while has passed.</string>
    <string name="overallReviewNo">No thank you.</string>
    <string name="overallReviewReport"> No - and I\'d like to <u>report</u> my buddy.</string>

    <string name="veryGoodMain">Nice!</string>
    <string name="veryGood2">We\’re glad to have been able to help you meet a cool person.</string>

    <string name="alrightMealMain">That\'s fair</string>
    <string name="alrightMeal2">Matching with the same person over and over can get awkward!</string>
    <string name="alrightMeal3">Choose how many weeks should go by before you can match with your buddy again:</string>
    <string-array name="weeksArray">
        <item>One Week</item>
        <item>Two Weeks</item>
        <item>Three Weeks</item>
        <item>Four Weeks</item>
    </string-array>

    <string name="badMealMain">Got it.</string>
    <string name="badMeal2">Matching preferences updated</string>
    <string name="badMeal3">You may not have made a new friend, but at least you took a chance and didn\'t end up eating alone.</string>
    <string name="badMeal4">We hope your next meal goes better!</string>

</resources>
