<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainPage.findAMealBuddy.location"
    android:background="@drawable/background_grad">


    <TextView
        android:id="@+id/overallReviewMain"
        android:layout_width="341dp"
        android:layout_height="155dp"
        android:gravity="center"
        android:shadowColor="#00473B3B"
        android:singleLine="false"
        android:text="@string/overallReviewMain"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBack"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/overallReviewBuddy"
        android:layout_width="179dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:shadowColor="#00473B3B"
        android:singleLine="false"
        android:text="@string/overallReviewBuddy"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallReviewMain"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/overallReviewBuddyDynamic"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:shadowColor="#00473B3B"
        android:singleLine="false"
        android:text="@string/overallReviewBuddyDynamic"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <View
        android:id="@+id/logoBack"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:background="@color/logoback3"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="354dp"
        android:layout_height="51dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/logoBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBack"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/overallReviewYes"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:background="@color/buttonBrown"
        android:text="@string/overallReviewYes"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallReviewBuddy"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/overallReviewWait"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:background="@color/buttonBrown"
        android:text="@string/overallReviewWait"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallReviewYes"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/overallReviewNo"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:background="@color/buttonBrown"
        android:text="@string/overallReviewNo"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallReviewWait"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/overallReviewReport"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:background="@color/buttonBrown"
        android:text="@string/overallReviewReport"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallReviewNo"
        app:layout_constraintVertical_bias="0.388" />

</androidx.constraintlayout.widget.ConstraintLayout>